feat: updated auth & docs
