# controllers/authControllers.js
@@ -9,9 +9,9 @@ const JWT_SECRET_KEY = process.env.JWT_SECRET_KEY;
 module.exports = {
     register: async (req, res, next) => {
         try {
-            let { name, email, password } = req.body
+            const { name, email, password, identity_type, identity_number, address } = req.body;
 
-            let exist = await prisma.user.findUnique({ where: { email } })
+            let exist = await prisma.user.findFirst({ where: { email } })
 
             if (exist) {
                 return res.status(400).json({
@@ -21,15 +21,35 @@ module.exports = {
                 })
             }
 
+            // Validasi data jika tidak diisi
+            if (!name || !email || !password || !identity_type || !identity_number || !address) {
+                return res.status(400).json({
+                    status: false,
+                    message: `'Name', 'Email', 'Password', 'Identity Type', 'Identity Number', 'Address' are required`,
+                    data: null,
+                });
+            }
+
             let encryptedPassword = await bcrypt.hash(password, 10)
 
             let user = await prisma.user.create({
                 data: {
-                    name: name,
-                    email: email,
-                    password: encryptedPassword
-                }
+                    name,
+                    email,
+                    password: encryptedPassword,
+                    profile: {
+                        create: {
+                            identity_type,
+                            identity_number,
+                            address,
+                        },
+                    },
+                },
+                include: {
+                    profile: true,
+                },
             })
+            delete user.password
 
             return res.status(201).json({
                 status: true,
@@ -46,7 +66,7 @@ module.exports = {
         try {
             let { email, password } = req.body
 
-            let user = await prisma.user.findUnique({ where: { email } })
+            let user = await prisma.user.findFirst({ where: { email } })
 
             if (!user) {
                 return res.status(400).json({
@@ -65,13 +85,14 @@ module.exports = {
                     data: null
                 })
             }
+            delete user.password
 
             let token = jwt.sign(user, JWT_SECRET_KEY)
 
             return res.status(200).json({
                 status: false,
                 message: 'User logged in success',
-                data: { user, token }
+                data: { ...user, token }
             })
 
         } catch (err) {
