# routes/api/v1/authRoutes.js
@@ -2,7 +2,7 @@ const router = require("express").Router()
 const { register, login, authenticate } = require("../../../controllers/authControllers")
 const restric = require("../../../middleware/restricted")
 
-router.post('/register', register)
-router.post('/login', login)
-router.get('/authenticate', restric, authenticate)
+router.post('/auth/register', register)
+router.post('/auth/login', login)
+router.get('/auth/authenticate', restric, authenticate)
 module.exports = router;
